# TrackersRemover-qBittorrent

./: README.md  TRqBt.py  pyproject.toml  requirements.txt  test.py
trackersremoverqbt/: core.py  core_tk.py
