[project]
name = "trackersremoverqbt"
version = "0.4.2"
description = "Automatically removes trackers from active qBittorrent downloads."
readme = "README.md"
authors = [
  { name="Julien Minniti", email="minnitijulien06@gmail.com" }
]
license = "MIT"
requires-python = ">=3.8"
dependencies = [
  "qbittorrent-api",
  "rich>=14.1.0",
  "requests>=2.32.4",
  "urllib3>=2.5.0",
  "rumps; sys_platform == 'darwin'",
  "macmenuqbt; sys_platform == 'darwin'"
]

[project.urls]
Homepage = "https://github.com/Jumitti/TrackersRemover-qBittorrent"

[project.scripts]
trackersremoverqbt = "trackersremoverqbt.core:main"
trqbt = "trackersremoverqbt.core:main"

trackersremoverqbt_tk = "trackersremoverqbt.core_tk:main"
trqbt_tk = "trackersremoverqbt.core_tk:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["img"]
